# AI-Screenshot-Translator

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  REFACTOR_PLAN.md  REFACTOR_RECOVERY.md  api_client.py  assets.qrc  build_log.txt  check-webview2.ps1  config.yaml  download_fonts.ps1  html_viewer.py  main.py  requirements.txt  setup.iss  test.html  uninstall-webview2.ps1
.github/workflows/: sync.yml
assets/: default_profile.json  privacy_policy.md  privacy_policy_en.md  startup_window.json  startup_window_en.json  window_hints.json  window_hints_en.json
assets/qss/: archive_toolbar_dark.qss  archive_toolbar_light.qss  status_indicator_dark.qss  status_indicator_light.qss
assets/templates/: result_logic.js  result_window.html  status_indicator.css  summary_logic.js
assets/translations/: en.json  zh.json
doc/: hint.md
nuitka/: README.md  find_qt.py
src/: AnalyticsManager.cpp  AnalyticsManager.h  ApiClient.cpp  ApiClient.h  ApiClient_Advanced.cpp  ApiClient_Providers.cpp  App.cpp  App.h  App_Api.cpp  App_Config.cpp  App_Screenshot.cpp  App_Theme.cpp  App_Tray.cpp  App_Windows.cpp  ColorUtils.cpp  ColorUtils.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog_AdvancedApi.cpp  ConfigDialog_AdvancedJsonFields.cpp  ConfigDialog_ArchiveTab.cpp  ConfigDialog_ColorPreview.cpp  ConfigDialog_Config.cpp  ConfigDialog_GeneralTab.cpp  ConfigDialog_NetworkTest.cpp  ConfigDialog_NetworkTestUtils.cpp  ConfigDialog_NetworkTestUtils.h  ConfigDialog_OtherTab.cpp  ConfigDialog_ProfileCrud.cpp  ConfigDialog_ProfileWatcher.cpp  ConfigDialog_Profiles.cpp  ConfigDialog_Retranslate.cpp  ConfigDialog_TranslationTab.cpp  ConfigDialog_Ui.cpp  ConfigDialog_UiSections.cpp  ConfigManager.cpp  ConfigManager.h  ConfigManager_Profiles.cpp  DotEnv.cpp  DotEnv.h  (+56 more)
src/assets/: hint.md  template.html  template3.html
test/: test.md  test_md.py
test/test_config_manager/: config_manager.py  hint.md  main.py
test/test_html_viewer/: test.py
test/test_screenshot/: test.py
